StreamAPIの古いメソッドを使っていたのを修正